fixing SetSubMenu for OSX_Cocoa, fixes #11581

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@63015 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775